# featrank

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
featrank/: __init__.py  cli.py  config.py  schemas.py
featrank/api/: __init__.py  main.py  schemas.py
featrank/api/routes/: cluster.py  health.py  ingest.py  rank.py  report.py
featrank/ingest/: __init__.py  base.py  csv_connector.py  github.py  intercom.py  zendesk.py
featrank/llm/: __init__.py  _client.py  extractor.py  narrator.py  rag.py
featrank/pipeline/: __init__.py  cleaner.py  clusterer.py  deduplicator.py  embedder.py  labeler.py
featrank/report/: __init__.py  json_report.py  markdown.py  slack.py
featrank/scoring/: __init__.py  frequency.py  github_signal.py  ranker.py  roadmap_fit.py  segment_value.py
notebooks/: 01_eda.ipynb  02_embedding_experiments.ipynb  03_clustering_tuning.ipynb  04_scoring_validation.ipynb
scripts/: benchmark.py  download_dataset.py  generate_fixtures.py
tests/: conftest.py
tests/fixtures/: sample_requests.csv  sample_roadmap.txt
tests/test_api/: test_routes.py
tests/test_pipeline/: test_cleaner.py  test_clusterer.py  test_embedder.py  test_ranker.py
