[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "featrank"
version = "0.1.0"
description = "Semantic feature request deduplication + priority ranking for product teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "askmy-stack" },
]
keywords = ["nlp", "product-management", "feature-requests", "clustering", "prioritization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12.0",
  "sentence-transformers>=3.0.0",
  "hdbscan>=0.8.38",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "groq>=0.9.0",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "httpx>=0.27.0",
  "faiss-cpu>=1.8.0",
  "PyGithub>=2.3.0",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "umap-learn>=0.5.6",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "tqdm>=4.66.0",
]

[project.scripts]
featrank = "featrank.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["featrank"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
